--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
 {
     border-bottom: 2px solid  blue;
 } */
+html
+{
+  scroll-behavior: smooth;
+}
 .Herosection
 {
     background-image: url('./assets/img/delicious-pizza-indoors.jpg');
