--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,12 @@ html
 {
   width: 0px;
 }
+
+@media (max-width:700px)
+ {
+  .Herosection
+  {
+    background-image: url('./assets/img/delicious-pizza-moblie.jpg');
+  }
+  
+}
